--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/njzjz/hexo-tag-youtube-fallback#readme",
   "dependencies": {
+    "bilitube": "^0.0.2",
     "hexo-tag-injector": "^0.0.1",
-    "hexo-util": "^2.4.0"
+    "hexo-util": "^2.4.0",
+    "jsdelivr_url": "^0.0.1"
   }
 }
