--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "bilitube": "^0.0.2",
     "hexo-tag-injector": "^0.1.0",
     "hexo-util": "^2.4.0",
-    "jsdelivr_url": "^0.0.1"
+    "unpkg_url": "^0.0.1"
   }
 }
